[gd_scene load_steps=8 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://sprites/titlescreen_bg.png" type="Texture" id=2]
[ext_resource path="res://sprites/titletext.png" type="Texture" id=3]
[ext_resource path="res://sprites/play_button_v2_normal.png" type="Texture" id=4]
[ext_resource path="res://sprites/play_button_v2_hover.png" type="Texture" id=5]
[ext_resource path="res://sprites/quit_button_v2_normal.png" type="Texture" id=6]
[ext_resource path="res://sprites/quit_button_v2_hover.png" type="Texture" id=7]

[node name="TitleScreen" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.252101, 0.252101 )
texture = ExtResource( 2 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 68.0
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 96.0
margin_top = 20.0
margin_right = 224.0
margin_bottom = 228.0
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 32.0
size_flags_horizontal = 4
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 32.0
margin_top = 48.0
margin_right = 96.0
margin_bottom = 84.0
size_flags_horizontal = 4

[node name="PlayButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 16.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="QuitButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 64.0
margin_bottom = 36.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
